# receipt-parser

./: README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci-tests.yml
src/receipt_parser/: __init__.py  parser.py
tests/: test_parser.py
tests/test_parser/: receipt_v1.json  receipt_v1_expected.json  receipt_v2.json  receipt_v2_expected.json
