[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''